hopefully fix alignment stuff

--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -28,6 +28,7 @@
 .index-image {
 	float: left;
 	margin: 30px;
+	margin-top: 0;
 }
 
 .clearboth {
